--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@
 
 Ezra Nobrega    <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Kabeer Akanni   <akannikabeer@gmail.com>
-Ayomide Suara   <aysuarex@gmail.com>
+Adele Aboaba <bidemidone@gmail.com>
+Mpho Matli
